--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
   cmake_policy(SET CMP0135 NEW)
 endif()
 
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION yes)
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS yes)
 
 include(FetchContent)
