Added include dirs for isa-l; updated build requirements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,7 @@ endif()
 target_include_directories(usher PUBLIC include)
 target_include_directories(usher PUBLIC ${Protobuf_INCLUDE_DIR})
 target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
+target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/isa-l/install/include)
 add_dependencies(usher range-v3)
 add_dependencies(usher isa-l)
 target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
