--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,18 +58,18 @@ ExternalProject_Add(range-v3
 )
 
 if(${USE_HTSLIB})
-ExternalProject_Add(htslib
-  GIT_REPOSITORY https://github.com/samtools/htslib.git
-  GIT_TAG 1.17
-  GIT_SHALLOW true
-  GIT_PROGRESS true
-  UPDATE_DISCONNECTED true
-  PREFIX htslib
-  BUILD_IN_SOURCE true
-  CONFIGURE_COMMAND autoreconf -i COMMAND ./configure --prefix=${PROJECT_BINARY_DIR}/htslib/install
-  BUILD_COMMAND make -j
-  INSTALL_COMMAND make install
-)
+  ExternalProject_Add(htslib
+    GIT_REPOSITORY https://github.com/samtools/htslib.git
+    GIT_TAG 1.17
+    GIT_SHALLOW true
+    GIT_PROGRESS true
+    UPDATE_DISCONNECTED true
+    PREFIX htslib
+    BUILD_IN_SOURCE true
+    CONFIGURE_COMMAND autoreconf -i COMMAND ./configure --prefix=${PROJECT_BINARY_DIR}/htslib/install
+    BUILD_COMMAND make -j
+    INSTALL_COMMAND make install
+  )
 endif()
 
 find_package(ZLIB)
@@ -111,10 +111,11 @@ function(larch_compile_opts PRODUCT)
   target_include_directories(${PRODUCT} PUBLIC ${PROTO_OUT_DIR}/deps/usher)
   target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
   add_dependencies(${PRODUCT} range-v3)
-if(${USE_HTSLIB})
-  target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/htslib/install/include)
-  add_dependencies(${PRODUCT} htslib)
-endif()
+
+  if(${USE_HTSLIB})
+    target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/htslib/install/include)
+    add_dependencies(${PRODUCT} htslib)
+  endif()
 endfunction()
 
 FIND_PACKAGE(Boost COMPONENTS program_options iostreams filesystem date_time REQUIRED)
@@ -223,6 +224,7 @@ larch_executable(larch-test
   test/test_ambiguities.cpp
   test/test_compact_genome.cpp
   test/test_count_trees.cpp
+  test/test_dag_completion.cpp
   test/test_dag_trimming.cpp
   test/test_larch_usher.cpp
   test/test_loading.cpp
