--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,26 @@ tbb_build(TBB_ROOT ${onetbb-src_SOURCE_DIR} CONFIG_DIR TBB_DIR MAKE_ARGS tbb_cpf
 find_package(TBB REQUIRED tbbmalloc tbbmalloc_proxy tbb_preview)
 find_package(MPI REQUIRED)
 include_directories(SYSTEM ${MPI_INCLUDE_PATH})
-find_package(Protobuf REQUIRED)
 
-protobuf_generate_cpp(DAG_PROTO_SRCS DAG_PROTO_HDRS
-  proto/dag.proto)
-protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS
-  deps/usher/parsimony.proto)
-protobuf_generate_cpp(DETAILED_MUTATIONS_PROTO_SRCS DETAILED_MUTATIONS_PROTO_HDRS
-  deps/usher/mutation_detailed.proto)
+include(protobuf.cmake)
+
+add_library(larch-autogen OBJECT
+  ${DAG_PROTO_SRCS} ${DAG_PROTO_HDRS}
+  ${PROTO_SRCS} ${PROTO_HDRS}
+  ${DETAILED_MUTATIONS_PROTO_SRCS} ${DETAILED_MUTATIONS_PROTO_HDRS}
+)
+set(PROTO_OUT_DIR ${PROJECT_BINARY_DIR})
+target_include_directories(larch-autogen PUBLIC ${PROTO_OUT_DIR} ${Protobuf_INCLUDE_DIRS})
+target_link_libraries(larch-autogen PUBLIC ${Protobuf_ABSL_LIBS})
+set_target_properties(larch-autogen
+  PROPERTIES CXX_CLANG_TIDY ""
+)
+
+protobuf_generate(
+  LANGUAGE cpp
+  TARGET larch-autogen
+  PROTOS proto/dag.proto deps/usher/parsimony.proto deps/usher/mutation_detailed.proto
+)
 
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
 FetchContent_MakeAvailable(json)
@@ -78,15 +90,6 @@ ExternalProject_Add(isa-l
 )
 set(isal_lib ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
 
-add_library(larch-autogen OBJECT
-  ${DAG_PROTO_SRCS} ${DAG_PROTO_HDRS}
-  ${PROTO_SRCS} ${PROTO_HDRS}
-  ${DETAILED_MUTATIONS_PROTO_SRCS} ${DETAILED_MUTATIONS_PROTO_HDRS}
-)
-set_target_properties(larch-autogen
-  PROPERTIES CXX_CLANG_TIDY ""
-)
-
 set(STRICT_WARNINGS -Werror -fno-common -Wno-unknown-warning-option -Wno-pragmas -Wall -Wextra -pedantic -Wold-style-cast -Wshadow -Wconversion -Wcast-align -Wcast-qual -Wlogical-op -Wlogical-not-parentheses -Wredundant-decls -Wunreachable-code -Wparentheses -Wno-dangling-reference -Wno-ignored-optimization-argument)
 
 if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
@@ -104,7 +107,8 @@ function(larch_compile_opts PRODUCT)
 
   target_include_directories(${PRODUCT} PUBLIC include tools test)
   target_include_directories(${PRODUCT} PUBLIC ${Protobuf_INCLUDE_DIR})
-  target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+  target_include_directories(${PRODUCT} PUBLIC ${PROTO_OUT_DIR})
+  target_include_directories(${PRODUCT} PUBLIC ${PROTO_OUT_DIR}/deps/usher)
   target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
   add_dependencies(${PRODUCT} range-v3)
 if(${USE_HTSLIB})
@@ -133,10 +137,6 @@ file(GLOB MATOPTIMIZE_SRC
   "deps/usher/src/matOptimize/optimize_tree.cpp"
   "deps/usher/src/matOptimize/priority_conflict_resolver.cpp"
   "deps/usher/src/matOptimize/check_samples.cpp"
-
-  "deps/usher/src/matOptimize/import_vcf_fast.cpp"
-  "deps/usher/src/matOptimize/VCF_load_tree.cpp"
-  "deps/usher/src/matOptimize/condense.cpp"
 )
 
 function(larch_link_opts PRODUCT)
@@ -198,7 +198,7 @@ target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/ins
 target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/isa-l/install/include)
 add_dependencies(usher range-v3)
 add_dependencies(usher isa-l)
-target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+target_include_directories(usher PUBLIC ${PROTO_OUT_DIR}/deps/usher)
 larch_link_opts(usher)
 target_link_libraries(usher PRIVATE ${Boost_LIBRARIES} ZLIB::ZLIB ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
 target_link_libraries(usher PUBLIC ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
@@ -220,7 +220,6 @@ set_target_properties(larch-usher-glue
 larch_executable(larch-test
   test/main.cpp
   test/test_ambiguities.cpp
-  test/test_ambiguous_vcf.cpp
   test/test_compact_genome.cpp
   test/test_count_trees.cpp
   test/test_dag_trimming.cpp
