--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,21 +74,21 @@ endif()
 
 find_package(ZLIB)
 
-# ExternalProject_Add(isa-l
-# GIT_REPOSITORY https://github.com/intel/isa-l.git
-# GIT_TAG v2.30.0
-# GIT_SHALLOW true
-# GIT_PROGRESS true
-# UPDATE_DISCONNECTED true
-# PREFIX isa-l
-# SOURCE_DIR isa-l/source
-# BINARY_DIR isa-l/source
-# INSTALL_DIR isa-l/install
-# CONFIGURE_COMMAND ${CMAKE_COMMAND} -E env SED=/bin/sed GREP=/bin/grep ./autogen.sh && ${CMAKE_COMMAND} -E env AS=yasm ./configure --prefix=${CMAKE_BINARY_DIR}/isa-l/install --libdir=${CMAKE_BINARY_DIR}/isa-l/install
-# BUILD_COMMAND make && make other
-# INSTALL_COMMAND make install
-# )
-# set(isal_lib ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
+ExternalProject_Add(isa-l
+  GIT_REPOSITORY https://github.com/intel/isa-l.git
+  GIT_TAG v2.30.0
+  GIT_SHALLOW true
+  GIT_PROGRESS true
+  UPDATE_DISCONNECTED true
+  PREFIX isa-l
+  SOURCE_DIR isa-l/source
+  BINARY_DIR isa-l/source
+  INSTALL_DIR isa-l/install
+  CONFIGURE_COMMAND ${CMAKE_COMMAND} -E env SED=/bin/sed GREP=/bin/grep ./autogen.sh && ${CMAKE_COMMAND} -E env AS=yasm ./configure --prefix=${CMAKE_BINARY_DIR}/isa-l/install --libdir=${CMAKE_BINARY_DIR}/isa-l/install
+  BUILD_COMMAND make && make other
+  INSTALL_COMMAND make install
+)
+set(isal_lib ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
 set(STRICT_WARNINGS -Werror -fno-common -Wno-unknown-warning-option -Wno-pragmas -Wall -Wextra -pedantic -Wold-style-cast -Wshadow -Wconversion -Wcast-align -Wcast-qual -Wlogical-op -Wlogical-not-parentheses -Wredundant-decls -Wunreachable-code -Wparentheses -Wno-dangling-reference -Wno-ignored-optimization-argument)
 
 if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
@@ -196,15 +196,15 @@ target_include_directories(usher PUBLIC include)
 target_include_directories(usher PUBLIC ${Protobuf_INCLUDE_DIR})
 target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
 
-# target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/isa-l/install/include)
+target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/isa-l/install/include)
 add_dependencies(usher range-v3)
 
-# add_dependencies(usher isa-l)
+add_dependencies(usher isa-l)
 target_include_directories(usher PUBLIC ${PROTO_OUT_DIR}/deps/usher)
 larch_link_opts(usher)
 target_link_libraries(usher PRIVATE ${Boost_LIBRARIES} ZLIB::ZLIB ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
 
-# target_link_libraries(usher PUBLIC ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
+target_link_libraries(usher PUBLIC ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
 set_target_properties(usher
   PROPERTIES CXX_CLANG_TIDY ""
 )
