added tests to insure that the matConversion steps preserve sampleIds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,6 +226,7 @@ larch_executable(larch-test
   test/test_dag_trimming.cpp
   test/test_larch_usher.cpp
   test/test_loading.cpp
+  test/test_mat_conversion.cpp
   test/test_matOptimize.cpp
   test/test_merge.cpp
   test/test_overlay.cpp
