--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,6 +259,7 @@ larch_executable(larch-test
   test/test_dag_completion.cpp
   test/test_dag_trimming.cpp
   test/test_larch_usher.cpp
+  test/test_lca.cpp
   test/test_loading.cpp
   test/test_mat_conversion.cpp
   test/test_matOptimize.cpp
