Uncondense mat nodes in dag loader (#70)
* add code to uncondense leaves when reading MAT protobuf

* WIP

* fixed leaf set computations for new-nodes in callbacks

* updated choice of disambiguated reference sequence for snakemake pipeline

* fixed empty edge mutations issue in larch-usher and updated sample_id evaluation for condensed leafsets in callbacks

* added sample_id loading to DAG protobuf IO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ file(GLOB MATOPTIMIZE_SRC
   "deps/usher/src/matOptimize/mutation_annotated_tree_nuc_utils.cpp"
   "deps/usher/src/matOptimize/optimize_inner_loop.cpp"
   "deps/usher/src/matOptimize/Mutation_Collection.cpp"
+  "deps/usher/src/matOptimize/condense.cpp"
   "deps/usher/src/matOptimize/reassign_states.cpp"
   "deps/usher/src/matOptimize/detailed_mutations_load.cpp"
   "deps/usher/src/matOptimize/detailed_mutations_store.cpp"
