--- a/environment.yml
+++ b/environment.yml
@@ -5,26 +5,29 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - git
+  # build packages
+  - cmake=3.19.6
+  - make
   - cxx-compiler
-  - mafft
-  - boost-cpp
   - openmpi
   - openmpi-mpicc
   - openmpi-mpicxx
+  - boost-cpp
+  - automake
+  - autoconf
+  - libtool
+  - yasm
+  - ucx
+  - zlib
+  # dev packages
+  - git
+  - mafft
   - python
   - rsync
   - wget
-  - cmake=3.19.6
-  - autoconf
   - protobuf=3.12.3
-  - make
   - openssh
   - gdb
   - bzip2
   - backports.lzma
-  - libtool
-  - automake
-  - yasm
   - isa-l
-
