WIP: added ymls for debugging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,11 @@ if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
 endif()
 
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION yes)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS yes)
 
 include(FetchContent)
 
-if (USE_USHER)
+if(USE_USHER)
   FetchContent_Declare(oneTBB-src
     GIT_REPOSITORY https://github.com/oneapi-src/oneTBB
     GIT_TAG 2019_U9
@@ -89,21 +88,6 @@ endif()
 
 find_package(ZLIB)
 
-#ExternalProject_Add(isa-l
-#  GIT_REPOSITORY https://github.com/intel/isa-l.git
-#  GIT_TAG v2.30.0
-#  GIT_SHALLOW true
-#  GIT_PROGRESS true
-#  UPDATE_DISCONNECTED true
-#  PREFIX isa-l
-#  SOURCE_DIR isa-l/source
-#  BINARY_DIR isa-l/source
-#  INSTALL_DIR isa-l/install
-#  CONFIGURE_COMMAND ${CMAKE_COMMAND} -E env SED=/bin/sed GREP=/bin/grep ./autogen.sh && ${CMAKE_COMMAND} -E env AS=yasm ./configure --prefix=${CMAKE_BINARY_DIR}/isa-l/install --libdir=${CMAKE_BINARY_DIR}/isa-l/install
-#  BUILD_COMMAND make && make other
-#  INSTALL_COMMAND make install
-#)
-#set(isal_lib ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
 set(STRICT_WARNINGS -Werror -fno-common -Wno-unknown-warning-option -Wno-pragmas -Wall -Wextra -pedantic -Wold-style-cast -Wshadow -Wconversion -Wcast-align -Wcast-qual -Wlogical-op -Wlogical-not-parentheses -Wredundant-decls -Wunreachable-code -Wparentheses -Wno-dangling-reference -Wno-ignored-optimization-argument)
 
 if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
@@ -112,7 +96,8 @@ endif()
 
 function(larch_compile_opts PRODUCT)
   target_compile_options(${PRODUCT} PUBLIC -march=native -std=c++17 -pipe)
-  if (CMAKE_BUILD_TYPE EQUAL "DEBUG")
+
+  if(CMAKE_BUILD_TYPE EQUAL "DEBUG")
     target_compile_options(${PRODUCT} PUBLIC -fno-omit-frame-pointer -fno-stack-protector)
   endif()
 
@@ -142,26 +127,26 @@ endfunction()
 FIND_PACKAGE(Boost COMPONENTS program_options iostreams filesystem date_time REQUIRED)
 
 if(${USE_USHER})
-include_directories(deps/usher/)
-file(GLOB MATOPTIMIZE_SRC
-  "deps/usher/src/matOptimize/apply_move/*.cpp"
-  "deps/usher/src/matOptimize/Profitable_Moves_Enumerators/*.cpp"
-  "deps/usher/src/matOptimize/Fitch_Sankoff.cpp"
-  "deps/usher/src/matOptimize/mutation_annotated_tree.cpp"
-  "deps/usher/src/matOptimize/mutation_annotated_tree_nuc_util.cpp"
-  "deps/usher/src/matOptimize/mutation_annotated_tree_node.cpp"
-  "deps/usher/src/matOptimize/mutation_annotated_tree_load_store.cpp"
-  "deps/usher/src/matOptimize/mutation_annotated_tree_nuc_utils.cpp"
-  "deps/usher/src/matOptimize/optimize_inner_loop.cpp"
-  "deps/usher/src/matOptimize/Mutation_Collection.cpp"
-  "deps/usher/src/matOptimize/condense.cpp"
-  "deps/usher/src/matOptimize/reassign_states.cpp"
-  "deps/usher/src/matOptimize/detailed_mutations_load.cpp"
-  "deps/usher/src/matOptimize/detailed_mutations_store.cpp"
-  "deps/usher/src/matOptimize/optimize_tree.cpp"
-  "deps/usher/src/matOptimize/priority_conflict_resolver.cpp"
-  "deps/usher/src/matOptimize/check_samples.cpp"
-)
+  include_directories(deps/usher/)
+  file(GLOB MATOPTIMIZE_SRC
+    "deps/usher/src/matOptimize/apply_move/*.cpp"
+    "deps/usher/src/matOptimize/Profitable_Moves_Enumerators/*.cpp"
+    "deps/usher/src/matOptimize/Fitch_Sankoff.cpp"
+    "deps/usher/src/matOptimize/mutation_annotated_tree.cpp"
+    "deps/usher/src/matOptimize/mutation_annotated_tree_nuc_util.cpp"
+    "deps/usher/src/matOptimize/mutation_annotated_tree_node.cpp"
+    "deps/usher/src/matOptimize/mutation_annotated_tree_load_store.cpp"
+    "deps/usher/src/matOptimize/mutation_annotated_tree_nuc_utils.cpp"
+    "deps/usher/src/matOptimize/optimize_inner_loop.cpp"
+    "deps/usher/src/matOptimize/Mutation_Collection.cpp"
+    "deps/usher/src/matOptimize/condense.cpp"
+    "deps/usher/src/matOptimize/reassign_states.cpp"
+    "deps/usher/src/matOptimize/detailed_mutations_load.cpp"
+    "deps/usher/src/matOptimize/detailed_mutations_store.cpp"
+    "deps/usher/src/matOptimize/optimize_tree.cpp"
+    "deps/usher/src/matOptimize/priority_conflict_resolver.cpp"
+    "deps/usher/src/matOptimize/check_samples.cpp"
+  )
 endif()
 
 function(larch_link_opts PRODUCT)
@@ -177,6 +162,7 @@ function(larch_link_opts PRODUCT)
   target_link_libraries(${PRODUCT} PUBLIC nlohmann_json::nlohmann_json)
   target_link_libraries(${PRODUCT} PUBLIC ${Protobuf_LIBRARIES})
   target_link_libraries(${PRODUCT} PUBLIC ${Boost_LIBRARIES})
+
   if(${USE_USHER})
     target_link_libraries(${PRODUCT} PUBLIC ${TBB_IMPORTED_TARGETS} -lstdc++fs)
   else()
@@ -211,49 +197,46 @@ endif()
 larch_link_opts(larch)
 
 if(${USE_USHER})
-add_library(usher
-  ${MATOPTIMIZE_SRC}
-  src/usher_globals.cpp)
-target_compile_options(usher PRIVATE -march=native -std=c++17 -w -fno-omit-frame-pointer  -DUSE_USHER)
+  add_library(usher
+    ${MATOPTIMIZE_SRC}
+    src/usher_globals.cpp)
+  target_compile_options(usher PRIVATE -march=native -std=c++17 -w -fno-omit-frame-pointer -DUSE_USHER)
 
-if(${USE_ASAN})
-  target_compile_options(usher PUBLIC -O0 -g3 -fsanitize=address,undefined -fno-sanitize-recover)
-elseif(${USE_TSAN})
-  target_compile_options(usher PUBLIC -O0 -g3 -fsanitize=thread)
-endif()
+  if(${USE_ASAN})
+    target_compile_options(usher PUBLIC -O0 -g3 -fsanitize=address,undefined -fno-sanitize-recover)
+  elseif(${USE_TSAN})
+    target_compile_options(usher PUBLIC -O0 -g3 -fsanitize=thread)
+  endif()
 
-target_include_directories(usher PUBLIC include)
-target_include_directories(usher PUBLIC ${Protobuf_INCLUDE_DIR})
-target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
+  target_include_directories(usher PUBLIC include)
+  target_include_directories(usher PUBLIC ${Protobuf_INCLUDE_DIR})
+  target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
 
-#target_include_directories(usher PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/isa-l/install/include)
-add_dependencies(usher range-v3)
+  add_dependencies(usher range-v3)
 
-#add_dependencies(usher isa-l)
-target_include_directories(usher PUBLIC ${PROTO_OUT_DIR}/deps/usher)
-larch_link_opts(usher)
-target_link_libraries(usher PRIVATE ${Boost_LIBRARIES} ZLIB::ZLIB ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
+  target_include_directories(usher PUBLIC ${PROTO_OUT_DIR}/deps/usher)
+  larch_link_opts(usher)
+  target_link_libraries(usher PRIVATE ${Boost_LIBRARIES} ZLIB::ZLIB ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
 
-#target_link_libraries(usher PUBLIC ${CMAKE_BINARY_DIR}/isa-l/install/libisal.a)
-set_target_properties(usher
-  PROPERTIES CXX_CLANG_TIDY ""
-)
+  set_target_properties(usher
+    PROPERTIES CXX_CLANG_TIDY ""
+  )
 
-add_library(larch-usher-glue
-  src/usher_glue.cpp)
-larch_compile_opts(larch-usher-glue)
-target_compile_options(larch-usher-glue PRIVATE ${STRICT_WARNINGS})
-larch_link_opts(larch-usher-glue)
-target_link_libraries(larch-usher-glue PUBLIC usher)
-add_dependencies(larch-usher-glue larch usher)
-set_target_properties(larch-usher-glue
-  PROPERTIES CXX_CLANG_TIDY ""
-)
+  add_library(larch-usher-glue
+    src/usher_glue.cpp)
+  larch_compile_opts(larch-usher-glue)
+  target_compile_options(larch-usher-glue PRIVATE ${STRICT_WARNINGS})
+  larch_link_opts(larch-usher-glue)
+  target_link_libraries(larch-usher-glue PUBLIC usher)
+  add_dependencies(larch-usher-glue larch usher)
+  set_target_properties(larch-usher-glue
+    PROPERTIES CXX_CLANG_TIDY ""
+  )
 endif()
 
 larch_executable(larch-test
   test/main.cpp
-  #test/test_ambiguous_vcf.cpp
+  test/test_ambiguous_vcf.cpp
   test/test_ambiguities.cpp
   test/test_compact_genome.cpp
   test/test_count_trees.cpp
@@ -278,12 +261,13 @@ larch_executable(larch-test
   test/test_write_parsimony.cpp
 )
 target_compile_options(larch-test PRIVATE ${STRICT_WARNINGS})
+
 if(${USE_USHER})
-target_link_libraries(larch-test PUBLIC larch-usher-glue usher)
-add_dependencies(larch-test larch-usher-glue)
-set_target_properties(larch-test
-  PROPERTIES CXX_CLANG_TIDY ""
-)
+  target_link_libraries(larch-test PUBLIC larch-usher-glue usher)
+  add_dependencies(larch-test larch-usher-glue)
+  set_target_properties(larch-test
+    PROPERTIES CXX_CLANG_TIDY ""
+  )
 endif()
 
 larch_executable(merge
@@ -293,10 +277,10 @@ larch_executable(dag2dot
   tools/dag2dot.cpp)
 
 if(${USE_USHER})
-larch_executable(larch-usher
-  tools/larch-usher.cpp
-)
-target_compile_options(larch-usher PRIVATE ${STRICT_WARNINGS})
-target_link_libraries(larch-usher PRIVATE larch-usher-glue)
-add_dependencies(larch-usher larch-usher-glue)
+  larch_executable(larch-usher
+    tools/larch-usher.cpp
+  )
+  target_compile_options(larch-usher PRIVATE ${STRICT_WARNINGS})
+  target_link_libraries(larch-usher PRIVATE larch-usher-glue)
+  add_dependencies(larch-usher larch-usher-glue)
 endif()
