--- a/environment.yml
+++ b/environment.yml
@@ -4,22 +4,27 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - git
-  - isa-l
+  - cmake=3.19.6
+  - make
   - cxx-compiler
-  - mafft
-  - boost-cpp
   - openmpi
+  - openmpi-mpicc
+  - openmpi-mpicxx
+  - boost-cpp
+  - automake
+  - autoconf
+  - libtool
+  - yasm
+  - ucx
+  - zlib
+
+  - git
+  - mafft
   - python
   - rsync
   - wget
-  - cmake=3.19.6
-  - autoconf
-  - protobuf=3.12.3
-  - make
   - openssh
   - gdb
   - bzip2
   - backports.lzma
-  - libtool
-  - automake
+  - protobuf=3.12.3
