moved merge->dag-util. added options for printing parsimonies and rf-distances. Added option to larch-usher to save itermediate dag files. some cli refactoring.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,8 +271,8 @@ if(${USE_USHER})
   )
 endif()
 
-larch_executable(merge
-  tools/merge.cpp)
+larch_executable(dag-util
+  tools/dag-util.cpp)
 
 larch_executable(dag2dot
   tools/dag2dot.cpp)
