--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -1,4 +1,4 @@
-name: Build and run tests
+name: Build with publish with conda
 on:
   workflow_dispatch:
 jobs:
@@ -17,32 +17,15 @@ jobs:
         run: |
           curl -L https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh > Miniconda3-latest-Linux-x86_64.sh
           bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
-          ~/miniconda/bin/conda update -n base -c defaults conda
-      - name: Create conda env
+          ~/miniconda/bin/conda update -n base -c defaults conda conda-build anaconda-client
+      - name: Build with conda-build
         run: |
-          source ~/miniconda/etc/profile.d/conda.sh
-          conda env create -f environment.yml
-      - name: Build (cmake step)
-        run: |
-          source ~/miniconda/etc/profile.d/conda.sh
-          conda activate larch-dev
-          mkdir build
-          cd build
-          export CMAKE_NUM_THREADS="8"
-          cmake -DCMAKE_BUILD_TYPE=Debug ..
-      - name: Build (make step)
-        run: |
-          source ~/miniconda/etc/profile.d/conda.sh
-          conda activate larch-dev
-          cd build
-          make -j20
+          conda-build .
+          mkdir conda-build-test
+          cd conda-build-test
           ln -s ../data
-      - name: Run tests
-        run: |
-          source ~/miniconda/etc/profile.d/conda.sh
-          conda activate larch-dev
-          cd build
-          ./larch-test -tag slow
+          larch-usher --version
+      # - name: Export to conda channel
+      #   run: |
+      #     anaconda login
 
-      - name: Export binaries
-        run: |
