--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -1,14 +1,17 @@
-# {{% set name = "larch" %}}
-# {{% set full_name = "larch-usher" %}}
-# {{% set version = "0.1" %}}
+{% set name = "larch" %}
+{% set full_name = "larch-usher" %}
+{% set version = "0.1-beta" %}
+# {% set version = "0.1" %}
 
 package:
-  name: larch
-  version: "0.1"
+  name: {{ name }}
+  version: {{ version }}
 
 source:
+  # path: "."
   git_url: https://github.com/matsengrp/larch.git
-  git_rev: conda-packaging
+  # git_rev: conda-packaging
+  git-rev: main
   git_submodules: true
 
 build:
@@ -88,15 +91,15 @@ requirements:
     - openssl
     - keyutils
 
-# test:
-#   commands:
-#     - larch-usher --version
+test:
+  commands:
+    - larch-usher --version
 
 about:
   home: https://github.com/matsengrp/larch
   license: GNU General Public License
   license_family: GPL
-  # license_file: LICENSE
+  license_file: LICENSE
   summary: 'Tool for exploring tree space of DAG/tree through SPR moves'
   description: |
     Tool for exploring tree space of DAG/tree through SPR moves
